--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   pull_to_refresh: ^2.0.0
-
+  provider: ^6.0.2
+  http: ^0.13.4
+  flutter_secure_storage: ^5.0.2
+  socket_io_client: ^1.0.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -46,6 +50,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  test: ^1.19.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
